# portfolio

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml
GHG_inventory/all_scopes/: index.html
GHG_inventory/scope3/business_travel/: index.html
GHG_inventory/scope3/commuting/: index.html
GHG_inventory/scope3/construction/: index.html
GHG_inventory/scope3/fuel_and_energy_related/: index.html
GHG_inventory/scope3/purchased_goods/: index.html
GHG_inventory/scope3/waste/: index.html
airtable/: index.html
dashboards/: index.html
docs/: airtable.md  dashboards.md  index.md  publications.md  resiliency.md
docs/GHG_inventory/: all_scopes.md
docs/GHG_inventory/scope3/: business_travel.md  commuting.md  construction.md  fuel_and_energy_related.md  purchased_goods.md  waste.md
docs/scope3/: business_travel.md  commuting.md  construction.md  purchased_goods.md  waste.md
docs/stylesheets/: extra.css
publications/: index.html
resiliency/: index.html
scope3/business_travel/: index.html
scope3/commuting/: index.html
scope3/construction/: index.html
scope3/waste/: index.html
search/: search_index.json
stylesheets/: extra.css
