[tool.poetry]
name = "portfolio"
version = "0.2.0"
description = "A documentation website for past MITOS projects"
authors = ["Yu Cheng <yu_cheng@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.40"}
mkdocs-caption = "^1.2.0"
mkdocs-git-revision-date-localized-plugin = "1.2.9"
cairosvg = "^2.7.1"
pillow = "^10.4.0"
mkdocs-autolinks-plugin = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
